--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,8 +16,8 @@ menu__settings:
     #   url: '/now/'
     - title: 'Portfolio'
       url: '/work/'
-    # - title: 'Blog'
-    #   url: '/blog/'
+    - title: 'Blog'
+      url: '/blog/'
     - title: 'About'
       url: '/about/'
 
@@ -27,6 +27,13 @@ menu__settings:
 hero:
   hero__title: "We're your TAAS <br />(Team as a Service)"
   hero__description: We're a creative duo that designs and develops from <a href="https://en.wikipedia.org/wiki/Minimum_viable_product" taget="_blank">MVP</a> to <a href="https://productschool.com/blog/product-management-2/minimum-lovable-product/" taget="_blank">MLP</a>. Our network of collaborators helps with illustration, marketing and native app projects.
+
+
+#-------------------------------
+# Blog Settings
+blog:
+  hero__title: "Hacer software es un movidón"
+  hero__description: Historias de artesanía digital por <a href="https://en.wikipedia.org/wiki/Minimum_viable_product" taget="_blank">Ivo</a> y <a href="https://productschool.com/blog/product-management-2/minimum-lovable-product/" taget="_blank">Carlos</a>.
 
 
 #-------------------------------
